package com.primefuel.fulltank.platform.inventory.domain.model.commands;

public record DeleteFuelProductCommand(Long fuelProductId) {
}
