package com.primefuel.fulltank.platform.inventory.domain.model.queries;

public record GetFuelProductsByProviderIdQuery(Long providerId) {
}

