package com.primefuel.fulltank.platform.inventory.domain.model.valueobjects;

public enum FuelType {
    DIESEL,
    GASOLINE,
    GASOLINE_84,
    GASOLINE_90,
    GASOLINE_95,
    GASOLINE_97,
    GLP,
    GNV
}