package com.primefuel.fulltank.platform.inventory.interfaces.rest;

public class InventoryController {
}
