package com.primefuel.fulltank.platform.inventory.interfaces.rest.resources;

public record UpdateFuelProductStockResource(Double newStock) {
}

