@startuml inventory
'==============================================================
' Bounded Context: Inventory
' Capas: interfaces / application / domain / infrastructure
' Nota: el path real del paquete usa "infraestructure" (sic).
'==============================================================
title Bounded Context - Inventory

skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
left to right direction

skinparam package {
  BackgroundColor<<interfaces>>     #FDF2E9
  BackgroundColor<<application>>    #EAF2F8
  BackgroundColor<<domain>>         #E9F7EF
  BackgroundColor<<infrastructure>> #F4ECF7
}

' =========================== INTERFACES ===========================
package "interfaces.rest" <<interfaces>> {
  class FuelProductsController
  class InventoryController

  package "resources" {
    class CreateFuelProductResource <<record>>
    class UpdateFuelProductResource <<record>>
    class UpdateFuelProductStockResource <<record>>
    class FuelProductResource <<record>>
  }
  package "transform" {
    class CreateFuelProductCommandFromResourceAssembler
    class UpdateFuelProductCommandFromResourceAssembler
    class UpdateFuelProductStockCommandFromResourceAssembler
    class FuelProductResourceFromEntityAssembler
  }
}

' =========================== APPLICATION ===========================
package "application" <<application>> {
  interface FuelProductCommandService
  interface FuelProductQueryService
  package "internal" {
    class FuelProductCommandServiceImpl
    class FuelProductQueryServiceImpl
  }
}

' =========================== DOMAIN ===========================
package "domain" <<domain>> {
  package "model.aggregates" {
    class FuelProduct {
      - Long id
      - String name
      - FuelType fuelType
      - Double pricePerUnit
      - String unit
      - Double availableStock
      - Double capacity
      - Long providerId
      - Boolean active
      + updateStock(Double)
      + update(UpdateFuelProductCommand)
    }
  }
  package "model.valueobjects" {
    enum FuelType {
      DIESEL
      GASOLINE
      GASOLINE_84/90/95/97
      GLP
      GNV
    }
  }
  package "model.commands" {
    class CreateFuelProductCommand <<record>>
    class UpdateFuelProductCommand <<record>>
    class UpdateFuelProductStockCommand <<record>>
    class DeleteFuelProductCommand <<record>>
  }
  package "model.queries" {
    class GetAllFuelProductsQuery <<record>>
    class GetFuelProductByIdQuery <<record>>
    class GetFuelProductsByProviderIdQuery <<record>>
  }
  package "repositories" {
    interface FuelProductRepository
  }
}

' =========================== INFRASTRUCTURE ===========================
package "infraestructure" <<infrastructure>> {
  package "persistence.jpa.adapters" {
    class FuelProductRepositoryImpl
  }
  package "persistence.jpa.entities" {
    class FuelProductPersistenceEntity <<entity>>
  }
  package "persistence.jpa.repositories" {
    interface FuelProductPersistenceRepository
  }
  package "persistence.jpa.assemblers" {
    class FuelProductPersistenceAssembler
  }
}

' =========================== RELACIONES ===========================
FuelProductsController ..> FuelProductCommandService
FuelProductsController ..> FuelProductQueryService

FuelProductCommandServiceImpl ..|> FuelProductCommandService
FuelProductQueryServiceImpl ..|> FuelProductQueryService

FuelProductCommandServiceImpl ..> FuelProductRepository
FuelProductCommandServiceImpl ..> FuelProduct
FuelProductQueryServiceImpl ..> FuelProductRepository

FuelProduct --> FuelType

FuelProductRepositoryImpl ..|> FuelProductRepository
FuelProductRepositoryImpl ..> FuelProductPersistenceRepository
FuelProductRepositoryImpl ..> FuelProductPersistenceAssembler
FuelProductPersistenceAssembler ..> FuelProductPersistenceEntity
FuelProductPersistenceAssembler ..> FuelProduct
@enduml
